--- a/PIC18F27K42/nbproject/Makefile-genesis.properties
+++ b/PIC18F27K42/nbproject/Makefile-genesis.properties
@@ -1,22 +1,28 @@
 #
-#Tue Oct 06 02:15:17 EDT 2020
-atbootable.languagetoolchain.version=2.20
-base.languagetoolchain.version=2.20
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-base.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
-MBRTU.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
-atbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
-configurations-xml=5d48775dfab7442cb4d242ca096355ad
-atbootable.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
-base.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
+#Tue Dec 29 01:04:18 EST 2020
+proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC18F27K42
+atbootable.languagetoolchain.version=2.31
+base.languagetoolchain.version=2.31
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
+base.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+MBRTU.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+atbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
+transparent_mode.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
+configurations-xml=c40983174068120b45271a557361234b
+atbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+base.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 host.platform=windows
-MBbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
-MBRTU.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.20\\bin
-atbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.20\\bin
-MBRTU.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
-conf.ids=base,atbootable,MBRTU,MBbootable
-MBbootable.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-K_DFP\\1.2.72
-base.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.20\\bin
-MBbootable.languagetoolchain.version=2.20
-MBRTU.languagetoolchain.version=2.20
-MBbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.20\\bin
+transparent_mode.languagetoolchain.version=2.31
+transparent_mode.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
+MBbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
+MBRTU.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
+atbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
+MBRTU.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
+host.id=1l85-i2mf-pl
+conf.ids=base,atbootable,MBRTU,MBbootable,transparent_mode
+MBbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+base.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
+MBbootable.languagetoolchain.version=2.31
+transparent_mode.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+MBbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
+MBRTU.languagetoolchain.version=2.31
