Radio hardware may be an issue

--- a/PIC18F27K42/nbproject/Makefile-genesis.properties
+++ b/PIC18F27K42/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Mon Dec 28 19:26:15 EST 2020
+#Wed Dec 30 14:57:26 EST 2020
 proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC18F27K42
 atbootable.languagetoolchain.version=2.31
 base.languagetoolchain.version=2.31
@@ -7,18 +7,22 @@ com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824
 base.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 MBRTU.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 atbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
-configurations-xml=d1bfbf1c8f8e6726b042e9f8ad3a3b35
+transparent_mode.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
+configurations-xml=d54179bf46c46d7455747f714311b3dd
 atbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 base.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 host.platform=windows
+transparent_mode.languagetoolchain.version=2.31
+transparent_mode.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 MBRTU.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 atbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBRTU.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 host.id=1l85-i2mf-pl
-conf.ids=base,atbootable,MBRTU,MBbootable
+conf.ids=base,atbootable,MBRTU,MBbootable,transparent_mode
 MBbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 base.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBbootable.languagetoolchain.version=2.31
+transparent_mode.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 MBbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBRTU.languagetoolchain.version=2.31
