--- a/PIC32MM0256GPM048/nbproject/Makefile-genesis.properties
+++ b/PIC32MM0256GPM048/nbproject/Makefile-genesis.properties
@@ -1,10 +1,8 @@
 #
-#Sun Jun 07 20:36:48 EDT 2020
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC32MM-GPM-0XX_DFP\\1.2.31
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v2.40\\bin
-configurations-xml=9f23996aaded870b9d32a4e40097eaba
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-default.languagetoolchain.version=2.40
+#Sat Jan 02 16:41:56 EST 2021
+proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC32MM0256GPM048
+host.id=1l85-i2mf-pl
+configurations-xml=6bcc4e466f86b2d2e6611cec543d1c39
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
 host.platform=windows
-conf.ids=default
+conf.ids=
