--- a/PIC32MM0256GPM048/nbproject/Makefile-genesis.properties
+++ b/PIC32MM0256GPM048/nbproject/Makefile-genesis.properties
@@ -1,8 +1,12 @@
 #
-#Sat Jan 02 16:41:56 EST 2021
-proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC32MM0256GPM048
-host.id=1l85-i2mf-pl
-configurations-xml=6bcc4e466f86b2d2e6611cec543d1c39
+#Fri Jan 22 00:02:17 EST 2021
+conf.ids=atcomm
+atcomm.languagetoolchain.dir=D\:\\software\\xc32\\bin
+host.id=2d50-3v3b-2h
+configurations-xml=7ff358d1060147dc833334ab96b8f967
+atcomm.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC32MM-GPM-0XX_DFP\\1.2.31
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
+proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC32MM0256GPM048
+atcomm.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 host.platform=windows
-conf.ids=
+atcomm.languagetoolchain.version=2.50
