Build break and MODBUS stack not working (#79)
* Parking code

* MBRTU working. TIM3 had incorrect clock source

* Disable Timer3 on powerup

* cppcheck report added or updated

Co-authored-by: cppcheck-action <cppcheck-action@master>

--- a/PIC18F27K42/nbproject/Makefile-genesis.properties
+++ b/PIC18F27K42/nbproject/Makefile-genesis.properties
@@ -1,28 +1,24 @@
 #
-#Sun Jan 10 02:05:14 EST 2021
+#Sat Feb 06 11:38:10 EST 2021
 proj.dir=D\:\\projects\\xTendLoRa\\LWmesh\\PIC18F27K42
 atbootable.languagetoolchain.version=2.31
 base.languagetoolchain.version=2.31
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-base.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
-MBRTU.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+base.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC18F-K_DFP\\1.2.72
+MBRTU.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC18F-K_DFP\\1.2.72
 atbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
-transparent_mode.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
-configurations-xml=79054c473f297a359e376e88c7eb5d2c
-atbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+configurations-xml=cbdd55da1271cee14acf1b3715e505c1
+atbootable.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC18F-K_DFP\\1.2.72
 base.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 host.platform=windows
-transparent_mode.languagetoolchain.version=2.31
-transparent_mode.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBbootable.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 MBRTU.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 atbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBRTU.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d9404904a11cd8baf0bd6c1f62dd8c23
 host.id=2d50-3v3b-2h
-conf.ids=base,atbootable,MBRTU,MBbootable,transparent_mode
-MBbootable.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
+conf.ids=base,atbootable,MBRTU,MBbootable
+MBbootable.Pack.dfplocation=C\:\\Users\\samue\\.mchp_packs\\Microchip\\PIC18F-K_DFP\\1.2.72
 base.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBbootable.languagetoolchain.version=2.31
-transparent_mode.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC18F-K_DFP\\1.4.87
 MBbootable.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.31\\bin
 MBRTU.languagetoolchain.version=2.31
